2004-03-06   Andras Varga

	* cobject.h, cpolymorphic.h: several changes:
	- info() method moved to cPolymorphic
	- buffer size for info() now explicitly declared as MAX_OBJECTINFO
	- new method detailedInfo() added to cPolymorphic -- this method
	  is allowed to produce a more verbose, multi-line description of
	  the object. Support for displaying it will be built into Tkenv.
	  Can be used to display internal tables (routing table, ARP cache,
	  etc) and other data structures.
	- default writeContents() implementation changed to use detailedInfo()
	- writeTo() method made "internal"

	* util.h, opp_string.h: opp_string changes:
	- created separate header opp_string.h
	- added c_str(), empty() methods for similarity to std::string
	- removed const char* conversion -- it was often tested against NULL
	  to see if string was empty, and caused confusion. c_str() never
	  returns NULL.

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-03-01  Andras Varga

	* ctypes.h,macros.h: createOne() return value changed from void* to
	cPolymorphic* so that it can be used with type safety. Only classes
	derived from cPolymorphic can be registered using Register_Class().

	* envirext.h: classes cScheduler, cOutputVectorManager,
	cOutputScalarManager, cSnapshotManager are now subclassed from
	cPolymorphic.

	* cobject.h, cpolymorphic.h: cPolymorphic removed from cobject.h and
	placed into its own header file.

2004-02-23  Andras Varga

	* cmodule.h: added changeParentTo() to cModule.
	* cenvir.h: added moduleReparented() to cEnvir.

2004-02-22  Andras Varga

	* cmodule.h: added gateSize() to cModule.

2004-02-20  Andras Varga

	* ctype.h, cchannel.h, cgate.h: introduced cChannelType which replaces
	cLinkType. cChannelType is a lot more flexible since its factory
	method create() allows creating channels of any class, not just
	cSimpleChannel. Custom channel behaviour can thus be implemented
	by authoring an own channel class and registering it via an